--- a/MDK-ARM/AD9850_FreeRTOS/AD9850_FreeRTOS.build_log.htm
+++ b/MDK-ARM/AD9850_FreeRTOS/AD9850_FreeRTOS.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-d:\桌面\AD9850+ADC+DMA+USART\MDK-ARM\AD9850_FreeRTOS.uvprojx
+D:\桌面\AD9850+ADC+DMA+USART - 副本\MDK-ARM\AD9850_FreeRTOS.uvprojx
 Project File Date:  08/03/2025
 
 <h2>Output:</h2>
@@ -50,7 +50,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.5.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
