--- a/MDK-ARM/AD9850_FreeRTOS/AD9850_FreeRTOS.build_log.htm
+++ b/MDK-ARM/AD9850_FreeRTOS/AD9850_FreeRTOS.build_log.htm
@@ -27,7 +27,64 @@ Project File Date:  08/03/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\software\Keil\ARM\ARMCC\Bin'
 Build target 'AD9850+ADC+DMA+USART'
-"AD9850_FreeRTOS\AD9850_FreeRTOS.axf" - 0 Error(s), 0 Warning(s).
+compiling stm32f4xx_hal_msp.c...
+compiling gpio.c...
+compiling stm32f4xx_hal_timebase_tim.c...
+compiling stm32f4xx_it.c...
+compiling AD985x.c...
+..\Core\Src\AD985x.c(139): warning:  #940-D: missing return statement at end of non-void function "Convert_Freq" 
+  }
+..\Core\Src\AD985x.c: 1 warning, 0 errors
+compiling freertos.c...
+../Core/Src/freertos.c(224): warning:  #177-D: variable "flag"  was declared but never referenced
+  	uint8_t flag = 0;
+../Core/Src/freertos.c(326): warning:  #177-D: variable "tx_buf"  was declared but never referenced
+    uint8_t tx_buf[500];  // 用于USART发送的缓冲区（250点×2字节）
+../Core/Src/freertos.c: 2 warnings, 0 errors
+compiling main.c...
+compiling adc.c...
+compiling dma.c...
+compiling usart.c...
+compiling tim.c...
+compiling sys.c...
+compiling delay.c...
+compiling pwm.c...
+..\Core\Src\pwm.c(177): warning:  #1-D: last line of file ends without a newline
+  }
+..\Core\Src\pwm.c: 1 warning, 0 errors
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_exti.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_dma.c...
+compiling croutine.c...
+compiling event_groups.c...
+compiling list.c...
+compiling stm32f4xx_hal_tim.c...
+compiling queue.c...
+compiling stream_buffer.c...
+compiling timers.c...
+compiling tasks.c...
+compiling heap_4.c...
+compiling cmsis_os.c...
+compiling port.c...
+compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal_adc_ex.c...
+compiling stm32f4xx_hal_adc.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling stm32f4xx_hal_uart.c...
+linking...
+Program Size: Code=18924 RO-data=800 RW-data=188 ZI-data=18476  
+FromELF: creating hex file...
+"AD9850_FreeRTOS\AD9850_FreeRTOS.axf" - 0 Error(s), 4 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +107,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.5.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:19
 </pre>
 </body>
 </html>
